[package]
name = "rust-home-mgr"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version="0.11",features=["json"]}
diesel = { version="1.4.0",features=["mysql","serde_json","chrono"] }
chrono = {version="0.4",features=["serde"]}
serde_json = "1.0"
serde = {version="1.0.127",features=["derive"]}
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
tokio = {version="1",features=["full"]}
redis = {version="0.21.2",features=["r2d2"]}
r2d2 = {version="0.8.9"}

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]
